--- a/static/slides/11-interactive-viz/slides_covid.Rmd
+++ b/static/slides/11-interactive-viz/slides_covid.Rmd
@@ -395,16 +395,20 @@ diamonds %>%
 
 ## Basic Scatterplot
 
-A basic scatterplot is easy to make, with the added benefit of tooltips that
-appear when your mouse hovers over each point. Specify a scatterplot by
-indicating `type = "scatter"`. Notice that the arguments for the `x` and `y` 
-variables as specified as formulas, with the tilde operator (`~`) preceding the
-variable that you're plotting.
-
+- `plot_ly()` allows basic scatterplots
+- Specify a scatterplot by `type = "scatter"` and `mode = 'markers'`
+- Notice how the arguments for the `x` and `y` variables as specified as formulas, with the tilde operator (`~`)
+- Use `color` to specify additional dimension (factor or continuous) 
+- Notice the automatic `tooltip` that appears when your mouse hovers over each point
+- Doubleclick any item in legend to isolate that point
 
 ```{r, eval=FALSE}
 library(plotly)
-plot_ly(mtcars, x = ~wt, y = ~mpg, type = "scatter")
+cv_states_today %>% 
+           plot_ly(x = ~deathsper100k, y = ~per100k, 
+                   type = 'scatter',
+                   mode = 'markers',
+                   color = ~state)
 ```
 
 ---
@@ -413,96 +417,254 @@ plot_ly(mtcars, x = ~wt, y = ~mpg, type = "scatter")
 
 ```{r, echo=FALSE, message=FALSE}
 library(plotly)
-plot_ly(mtcars, x = ~wt, y = ~mpg, type = "scatter")
+cv_states_today %>% 
+           plot_ly(x = ~deathsper100k, y = ~per100k, 
+                   type = 'scatter',
+                   mode = 'markers',
+                   color = ~population)
 ```
 
 ---
 
-## Scatterplot Color
+## Scatterplot: size
 
-You can add color to your scatterplot points according to a categorical variable
-in the data frame you use with `plot_ly()`.
+- You can add an additional dimension by adjusting the `size` of each point (also with `~` operator)
+- Specify the limits of the size through `sizes`
+- `sizemode` specifies `'area'` or `'diameter'`
 
 ```{r, eval=FALSE}
-plot_ly(mtcars, x = ~wt, y = ~mpg, type = "scatter", color = ~factor(cyl))
+cv_states_today %>% 
+           plot_ly(x = ~deathsper100k, y = ~per100k, 
+                   type = 'scatter',
+                   mode = 'markers',
+                   color = ~state,
+                   size = ~population,
+                   sizes = c(5, 70),
+                   marker = list(sizemode='diameter', opacity=0.5))
+
 ```
 
 ---
 
-## Scatterplot Color
+## Scatterplot: size
 
 ```{r, echo=FALSE, message=FALSE}
-plot_ly(mtcars, x = ~wt, y = ~mpg, type = "scatter", color = ~factor(cyl))
+cv_states_today %>% 
+           plot_ly(x = ~deathsper100k, y = ~per100k, 
+                   type = 'scatter',
+                   mode = 'markers',
+                   color = ~state,
+                   size = ~population,
+                   sizes = c(5, 70),
+                   marker = list(sizemode='diameter', opacity=0.5))
+
 ```
 
 ---
 
-## Continuous Color
+## Specifying hover information
 
-You can also show continuous variables with color in scatterplots.
+- You can specify what info will appear when hovering using `hoverinfo` through the `text` argument (also with `~` operator)
+- Multiple variables can be included upon hover
+- Create new lines between variables in `hoverinfo` using `sep = "<br>"`
 
 ```{r, eval=FALSE}
-plot_ly(mtcars, x = ~wt, y = ~mpg, type = "scatter", color = ~disp)
+cv_states_today %>% 
+  plot_ly(x = ~deathsper100k, y = ~per100k, 
+          type = 'scatter', mode = 'markers', color = ~state,
+          size = ~naive_CFR, sizes = c(5, 70), marker = list(sizemode='diameter', opacity=0.5),
+          hoverinfo = 'text',
+          text = ~paste( paste(state, ":", sep=""),
+                         paste(" Cases per 100k: ", per100k, sep="") ,
+                         paste(" Deaths per 100k: ", deathsper100k, sep=""),
+                         paste(" CFR (%): ", naive_CFR,sep=""),
+                         sep = "<br>")) 
 ```
 
----
+--- 
 
-## Continuous Color
+## Specifying hover information
 
 ```{r, echo=FALSE, message=FALSE}
-plot_ly(mtcars, x = ~wt, y = ~mpg, type = "scatter", color = ~disp)
+cv_states_today %>% 
+  plot_ly(x = ~deathsper100k, y = ~per100k, 
+          type = 'scatter', mode = 'markers', color = ~state,
+          size = ~naive_CFR, sizes = c(5, 70), marker = list(sizemode='diameter', opacity=0.5),
+          hoverinfo = 'text',
+          text = ~paste( paste(state, ":", sep=""),
+                         paste(" Cases per 100k: ", per100k, sep="") ,
+                         paste(" Deaths per 100k: ", deathsper100k, sep=""),
+                         paste(" CFR (%): ", naive_CFR,sep=""),
+                         sep = "<br>")) 
 ```
 
 ---
 
-## Scatterplot Sizing
+## Layout
 
-By specifying the `size` argument you can make each point in your scatterplot a
-different size.
+- Specify chart labels through `layout()`
+- `hovermode = "compare"` allows comparing multiple points (default is `"closest"`)
 
 ```{r, eval=FALSE}
-plot_ly(mtcars, x = ~wt, y = ~mpg, type = "scatter", 
-        color = ~factor(cyl), size = ~hp)
+cv_states_today %>% 
+  plot_ly(x = ~deathsper100k, y = ~per100k, 
+          type = 'scatter', mode = 'markers', color = ~state,
+          size = ~naive_CFR, sizes = c(5, 70), marker = list(sizemode='diameter', opacity=0.5),
+          hoverinfo = 'text',
+          text = ~paste( paste(state, ":", sep=""), paste(" Cases per 100k: ", per100k, sep="") , paste(" Deaths per 100k: ", 
+                        deathsper100k, sep=""), paste(" CFR (%): ", naive_CFR,sep=""), sep = "<br>")) %>% 
+  layout(title = "Cases, Deaths, and Naive Case Fatality Rate for US States",
+                  yaxis = list(title = "Cases"), xaxis = list(title = "Deaths"),
+         hovermode = "compare")
 ```
 
 ---
 
-## Scatterplot Sizing
+## Layout
 
 ```{r, echo=FALSE, message=FALSE}
-plot_ly(mtcars, x = ~wt, y = ~mpg, type = "scatter", 
-        color = ~factor(cyl), size = ~hp)
+cv_states_today %>% 
+  plot_ly(x = ~deathsper100k, y = ~per100k, 
+          type = 'scatter', mode = 'markers', color = ~state,
+          size = ~naive_CFR, sizes = c(5, 70), marker = list(sizemode='diameter', opacity=0.5),
+          hoverinfo = 'text',
+          text = ~paste( paste(state, ":", sep=""), paste(" Cases per 100k: ", per100k, sep="") , paste(" Deaths per 100k: ", 
+                        deathsper100k, sep=""), paste(" CFR (%): ", naive_CFR,sep=""), sep = "<br>")) %>% 
+  layout(title = "Cases, Deaths, and Naive Case Fatality Rate for US States",
+                  yaxis = list(title = "Cases"), xaxis = list(title = "Deaths"),
+         hovermode = "compare")
+```
+
+--- 
+
+## 3D Scatterplot
+
+- Can add a 3rd dimension using `type = 'scatter3d'` (make sure to specify the dimension as `z`)
+```{r, eval=FALSE}
+cv_states_today %>% 
+  plot_ly(x = ~deathsper100k, y = ~per100k, z = ~population,
+          type = 'scatter3d', mode = 'markers', color = ~state,
+          size = ~naive_CFR, sizes = c(5, 70), marker = list(sizemode='diameter', opacity=0.5),
+          hoverinfo = 'text',
+          text = ~paste( paste(state, ":", sep=""), paste(" Cases per 100k: ", per100k, sep="") , paste(" Deaths per 100k: ", 
+                        deathsper100k, sep=""), paste(" CFR (%): ", naive_CFR,sep=""), sep = "<br>")) %>% 
+  layout(title = "Cases, Deaths, and Naive Case Fatality Rate for US States",
+                  yaxis = list(title = "Cases"), xaxis = list(title = "Deaths"),
+         hovermode = "compare")
 ```
 
 ---
 
 ## 3D Scatterplot
 
-You can create a three-dimensional scatterplot with the `type = "scatter3d"`
-argument. If you click and drag these scatterplots you can view them from
-different angles.
+```{r, echo=FALSE, message=FALSE}
+cv_states_today %>% 
+  plot_ly(x = ~deathsper100k, y = ~per100k, z = ~population,
+          type = 'scatter3d', mode = 'markers', color = ~state,
+          size = ~naive_CFR, sizes = c(5, 70), marker = list(sizemode='diameter', opacity=0.5),
+          hoverinfo = 'text',
+          text = ~paste( paste(state, ":", sep=""), paste(" Cases per 100k: ", per100k, sep="") , paste(" Deaths per 100k: ", 
+                        deathsper100k, sep=""), paste(" CFR (%): ", naive_CFR,sep=""), sep = "<br>")) %>% 
+  layout(title = "Cases, Deaths, and Naive Case Fatality Rate for US States",
+                  yaxis = list(title = "Cases"), xaxis = list(title = "Deaths"),
+         hovermode = "compare")
+```
+
+--- 
+
+## Line graph
+
+- Specify a line plot using `type = "scatter"` and `mode = "lines"`
+- Be sure to specify the feature (column in the data) that distinguishes the lines (normally through `color`)
 
 ```{r, eval=FALSE}
-set.seed(2016-07-21)
-temp <- rnorm(100, mean = 30, sd = 5)
-pressue <- rnorm(100)
-dtime <- 1:100
-plot_ly(x = ~temp, y = ~pressue, z = ~dtime,
-        type = "scatter3d", color = ~temp)
+
+plot_ly(cv_states, x = ~date, y = ~deaths, color = ~state, type = "scatter", mode = "lines",
+        hoverinfo = 'text',
+        text = ~paste( paste("Date: ", date, sep=""), paste(state, ":", sep=""), paste(" Cases (total): ", cases, sep=""), 
+                       paste(" Cases per 100k: ", per100k, sep=""), sep = "<br>"))
 ```
 
 ---
 
-## 3D Scatterplot
+## Line graph
 
 ```{r, echo=FALSE, message=FALSE}
-set.seed(2016-07-21)
-temp <- rnorm(100, mean = 30, sd = 5)
-pressue <- rnorm(100)
-dtime <- 1:100
-plot_ly(x = ~temp, y = ~pressue, z = ~dtime,
-        type = "scatter3d", color = ~temp)
+
+plot_ly(cv_states, x = ~date, y = ~deaths, color = ~state, type = "scatter", mode = "lines",
+        hoverinfo = 'text',
+        text = ~paste( paste("Date: ", date, sep=""), paste(state, ":", sep=""), paste(" Cases (total): ", cases, sep=""), 
+                       paste(" Cases per 100k: ", per100k, sep=""), sep = "<br>"))
 ```
+
+---
+
+## Line graph: `plot_ly()` vs. `ggplotly()`
+
+- simply pass a `ggplot` object to `ggplotly()` to create an interactive version
+- Both `plot_ly()` and `ggplotly()` line plots can be specified with little code
+  - Compare the `tooltip` results for both plots
+
+```{r, eval=FALSE}
+
+g1 = plot_ly(cv_states, x = ~date, y = ~deaths, color = ~state, type = "scatter", mode = "lines")
+g1 = ggplot(cv_states, aes(x = date, y = cases, color = state)) + geom_line() + geom_point(size = .5, alpha = 0.5)
+ggplotly(g1)
+
+```
+
+---
+
+## Line graph: `plot_ly()` vs. `ggplotly()` NEED TO ARRANGE THESE
+
+```{r, message=FALSE, echo=FALSE}
+
+g1 = plot_ly(cv_states, x = ~date, y = ~deaths, color = ~state, type = "scatter", mode = "lines")
+g1 = ggplot(cv_states, aes(x = date, y = cases, color = state)) + geom_line() + geom_point(size = .5, alpha = 0.5)
+ggplotly(g1)
+
+```
+
+---
+
+## Line graph: `ggplotly()`
+
+- You can specify the tooltip text in the `ggplot()` or `ggplotly()` prompt, but note that the `ggplotly()` prompt only accepts text in `" "`
+
+```{r, eval=FALSE}
+
+g1 = ggplot(cv_states, aes(x = date, y = cases, color = state, 
+                           text=paste( paste("Date: ", date, sep=""), paste(state, ":", sep=""), paste(" Cases (total): ", cases, sep=""),sep = "<br>") )) + geom_line() + geom_point(size = .5, alpha = 0.5) 
+ggplotly(g1, tooltip = "text")
+
+```
+
+--
+
+## Line graph: `ggplotly()`
+
+```{r, message=FALSE, echo=FALSE}
+
+g1 = ggplot(cv_states, aes(x = date, y = cases, color = state, 
+                           text=paste( paste("Date: ", date, sep=""), paste(state, ":", sep=""), paste(" Cases (total): ", cases, sep=""),sep = "<br>") )) + geom_line() + geom_point(size = .5, alpha = 0.5) 
+ggplotly(g1, tooltip = "text")
+
+```
+
+---
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 ---
 
