added lots of examples

--- a/static/slides/11-interactive-viz/slides_covid.Rmd
+++ b/static/slides/11-interactive-viz/slides_covid.Rmd
@@ -32,6 +32,21 @@ code.r,code.cpp{
 ```{r include=FALSE}
 library(knitr)
 library(here)
+library(magrittr)
+
+# load required packages
+if(!require(magrittr)) install.packages("magrittr", repos = "http://cran.us.r-project.org")
+if(!require(rvest)) install.packages("rvest", repos = "http://cran.us.r-project.org")
+if(!require(readxl)) install.packages("readxl", repos = "http://cran.us.r-project.org")
+if(!require(dplyr)) install.packages("dplyr", repos = "http://cran.us.r-project.org")
+if(!require(maps)) install.packages("maps", repos = "http://cran.us.r-project.org")
+if(!require(ggplot2)) install.packages("ggplot2", repos = "http://cran.us.r-project.org")
+if(!require(reshape2)) install.packages("reshape2", repos = "http://cran.us.r-project.org")
+#if(!require(ggiraph)) install.packages("ggiraph", repos = "http://cran.us.r-project.org")
+if(!require(RColorBrewer)) install.packages("RColorBrewer", repos = "http://cran.us.r-project.org")
+if(!require(leaflet)) install.packages("leaflet", repos = "http://cran.us.r-project.org")
+if(!require(plotly)) install.packages("plotly", repos = "http://cran.us.r-project.org")
+if(!require(geojsonio)) install.packages("geojsonio", repos = "http://cran.us.r-project.org")
 
 opts_chunk$set(
   echo = TRUE,
@@ -39,6 +54,14 @@ opts_chunk$set(
   fig.align = 'center',
   fig.asp = 0.618, # 1 / phi
   out.width = "700px")
+
+# import data
+cv_states = read.csv("input_data/coronavirus_states.csv")
+cv_states$date = as.Date(cv_states$date, format="%Y-%m-%d")
+
+# cv_states_today
+cv_states_today = subset(cv_states, date==max(cv_states$date))
+
 ```
 
 # Introduction to interactive visualization
@@ -230,7 +253,7 @@ Python, Matlab, and Excel.
 Installing Plotly is easy
 
 ```{r, eval=FALSE}
-install.packages("plotly")
+#install.packages("plotly")
 library(plotly)
 ```
 
@@ -390,6 +413,23 @@ diamonds %>%
   plot_ly() %>% 
   add_histogram(x = ~cut)
 ```
+
+---
+
+# `ggplotly()`
+
+- We also have the option of working with `ggplotly()` function from the **plotly** package, which can translate **ggplot2** to **plotly**. 
+
+- The essence of this is very straightforward: 
+
+```{r, eval=FALSE}
+p <- ggplot(*) + geom_*()
+ggplotly(p)
+```
+
+- This functionality can be really helpful for quickly adding interactivity to your existing **ggplot2** workflow.
+
+- `ggplotly()` can be desirable for creating visualizations that aren't necessarily straightforward to achieve without it. This can be particularly true for exploring statistical summaries across groups. The ability to quickly generate statistical summaries across groups works for basically any geom (e.g., `geom_boxplot()`, `geom_histogram()`, `geom_density()`, etc.)
 
 ---
 
@@ -570,6 +610,77 @@ cv_states_today %>%
          hovermode = "compare")
 ```
 
+---
+
+## Scatterplot with `ggplotly()`
+
+- You can create a scatterplot with the `ggplotly()` function in 1 additional line of code
+- Here we have also added `geom_smooth()` to see the pattern in the scatter. Note that the `geom_smooth()` line also appers upon hover
+
+```{r, eval=FALSE}
+p <- ggplot(cv_states_today, aes(x=deathsper100k, y=per100k, size=naive_CFR)) + geom_point() + geom_smooth()
+ggplotly(p)
+```
+
+---
+
+## Scatterplot with `ggplotly()`
+
+```{r, echo=FALSE, message=FALSE}
+p <- ggplot(cv_states_today, aes(x=deathsper100k, y=per100k, size=naive_CFR)) + geom_point() + geom_smooth()
+ggplotly(p)
+```
+
+---
+
+## Scatterplot with `ggplotly()`
+
+- You can add annotations to your interactive plot
+
+```{r, eval=FALSE}
+
+p <- ggplot(cv_states_today, aes(x=deathsper100k, y=per100k, size=naive_CFR)) + geom_point() + geom_smooth()
+fig <- p %>% 
+  ggplotly(layerData = 2, originalData = F) %>% 
+  add_fun(function(p) {
+    fig %>% slice(which.min(se)) %>%
+      add_segments(x = ~x, xend = ~x, y = ~ymin, yend = ~ymax) %>%
+      add_annotations("Minimum uncertainty")
+  })
+fig <- fig %>% 
+  add_fun(function(p){
+    fig %>% slice(which.max(se)) %>% 
+      add_segments(x = ~x, xend = ~x, y = ~ymin, yend = ~ymax) %>%
+      add_annotations("Max uncertainty")
+  })
+fig
+
+```
+
+---
+
+## Scatterplot with `ggplotly()`
+
+```{r, eval=FALSE, echo=FALSE, message=FALSE}
+
+p <- ggplot(cv_states_today, aes(x=deathsper100k, y=per100k, size=naive_CFR)) + geom_point() + geom_smooth()
+fig <- p %>% 
+  ggplotly(layerData = 2, originalData = F) %>% 
+  add_fun(function(p) {
+    fig %>% slice(which.min(se)) %>%
+      add_segments(x = ~x, xend = ~x, y = ~ymin, yend = ~ymax) %>%
+      add_annotations("Minimum uncertainty")
+  })
+fig <- fig %>% 
+  add_fun(function(p){
+    fig %>% slice(which.max(se)) %>% 
+      add_segments(x = ~x, xend = ~x, y = ~ymin, yend = ~ymax) %>%
+      add_annotations("Max uncertainty")
+  })
+fig
+
+```
+
 --- 
 
 ## Line graph
@@ -601,33 +712,36 @@ plot_ly(cv_states, x = ~date, y = ~deaths, color = ~state, type = "scatter", mod
 
 ## Line graph: `plot_ly()` vs. `ggplotly()`
 
-- simply pass a `ggplot` object to `ggplotly()` to create an interactive version
 - Both `plot_ly()` and `ggplotly()` line plots can be specified with little code
-  - Compare the `tooltip` results for both plots
+- simply pass a `ggplot` object to `ggplotly()` to create an interactive version
+- `subplot()` can be used to join arrange multiple plots -- works similarly to `grid.arrange()` function from the **gridExtra** package
+  - Compare the automatic `tooltip` results for both plots
 
 ```{r, eval=FALSE}
 
 g1 = plot_ly(cv_states, x = ~date, y = ~deaths, color = ~state, type = "scatter", mode = "lines")
-g1 = ggplot(cv_states, aes(x = date, y = cases, color = state)) + geom_line() + geom_point(size = .5, alpha = 0.5)
-ggplotly(g1)
+g2 = ggplot(cv_states, aes(x = date, y = cases, color = state)) + geom_line() + geom_point(size = .5, alpha = 0.5)
+g2_plotly <- ggplotly(g2)
+subplot(g1, g2_plotly)
 
 ```
 
 ---
 
-## Line graph: `plot_ly()` vs. `ggplotly()` NEED TO ARRANGE THESE
+## Line graph: `plot_ly()` vs. `ggplotly()`
 
 ```{r, message=FALSE, echo=FALSE}
 
 g1 = plot_ly(cv_states, x = ~date, y = ~deaths, color = ~state, type = "scatter", mode = "lines")
-g1 = ggplot(cv_states, aes(x = date, y = cases, color = state)) + geom_line() + geom_point(size = .5, alpha = 0.5)
-ggplotly(g1)
+g2 = ggplot(cv_states, aes(x = date, y = cases, color = state)) + geom_line() + geom_point(size = .5, alpha = 0.5)
+g2_plotly <- ggplotly(g2)
+subplot(g1, g2_plotly)
 
 ```
 
 ---
 
-## Line graph: `ggplotly()`
+## Specifying text with `ggplotly()`
 
 - You can specify the tooltip text in the `ggplot()` or `ggplotly()` prompt, but note that the `ggplotly()` prompt only accepts text in `" "`
 
@@ -641,7 +755,7 @@ ggplotly(g1, tooltip = "text")
 
 --
 
-## Line graph: `ggplotly()`
+## Specifying text with `ggplotly()`
 
 ```{r, message=FALSE, echo=FALSE}
 
@@ -653,275 +767,269 @@ ggplotly(g1, tooltip = "text")
 
 ---
 
+## Histograms
 
-
-
-
-
-
-
-
-
-
-
-
-
----
-
-## Line Graph
-
-Line graphs are the default graph for `plot_ly()`. They're of course useful for
-showing change over time:
+- For `plot_ly()` use the `type = "histogram"` argument
+- Note that `list()` is used to input keys with multiple values (e.g. `xbins`)
 
 ```{r, eval=FALSE}
-data("airmiles")
-plot_ly(x = ~time(airmiles), y = ~airmiles, type = "scatter", mode = "lines")
+g1 <- cv_states_today %>% 
+  plot_ly(x = ~new_deaths, type = "histogram", xbins = list(size = 1, end=30 ))
+g2 <- cv_states_today %>% ggplot( aes(x=new_deaths)) + geom_histogram(binwidth=1)
+g2_plotly <- ggplotly(g2)
+subplot(g1, g2_plotly)
 ```
 
 ---
 
-## Line Graph
+## Histograms
 
 ```{r, echo=FALSE, message=FALSE}
-data("airmiles")
-plot_ly(x = ~time(airmiles), y = ~airmiles, type = "scatter", mode = "lines")
+g1 <- cv_states_today %>% 
+  plot_ly(x = ~new_deaths, type = "histogram", xbins = list(size = 1, end=30 ))
+g2 <- cv_states_today %>% ggplot( aes(x=new_deaths)) + geom_histogram(binwidth=1)
+g2_plotly <- ggplotly(g2)
+subplot(g1, g2_plotly)
 ```
+
 
 ---
 
-## Multi Line Graph
+## Heatmap
 
-You can show multiple lines by specifying the column in the data frame that
-separates the lines:
+- Heatmaps are useful for displaying three dimensional data in two dimensions, using color for the third dimension. 
+- To create a heatmap from a dataframe we first have to create a matrix out of the three dimensions we want to include. We can do this using the `pivot_wider()` function from **tidyr** (there are many other options)
+  - Here we are choosing `date`, `state`, and `newdeathsper100k` to show in our heatmap
 
 ```{r, eval=FALSE}
-library(plotly)
 library(tidyr)
-library(dplyr)
-data("EuStockMarkets")
-
-stocks <- as.data.frame(EuStockMarkets) %>%
-  gather(index, price) %>%
-  mutate(time = rep(time(EuStockMarkets), 4))
-
-plot_ly(stocks, x = ~time, y = ~price, color = ~index, type = "scatter", mode = "lines")
-```
-
----
-
-## Multi Line Graph
-
-```{r, echo=FALSE, message=FALSE}
-library(plotly)
-library(tidyr)
-library(dplyr)
-data("EuStockMarkets")
-
-stocks <- as.data.frame(EuStockMarkets) %>%
-  gather(index, price) %>%
-  mutate(time = rep(time(EuStockMarkets), 4))
-
-plot_ly(stocks, x = ~time, y = ~price, color = ~index, type = "scatter", mode = "lines")
-```
-
----
-
-## Histogram
-
-A histogram is great for showing how counts of data are distributed. Use the
-`type = "histogram"` argument.
-
-```{r, eval=FALSE}
-plot_ly(x = ~precip, type = "histogram")
-```
-
----
-
-## Histogram
-
-```{r, echo=FALSE, message=FALSE}
-plot_ly(x = ~precip, type = "histogram")
-```
-
----
-
-## Boxplot
-
-Boxplots are wonderful for comparing how different datasets are distributed.
-Specify `type = "box"` to create a boxplot.
-
-```{r, eval=FALSE}
-plot_ly(iris, y = ~Petal.Length, color = ~Species, type = "box")
-```
-
----
-
-## Boxplot
-
-```{r, echo=FALSE, message=FALSE}
-plot_ly(iris, y = ~Petal.Length, color = ~Species, type = "box")
+cv_states_mat <- cv_states %>% select(state, date, newdeathsper100k) %>% filter(date>"2020-03-31") %>% filter(newdeathsper100k < 10)
+cv_states_mat2 <- as.data.frame(pivot_wider(cv_states_mat, names_from = state, values_from = newdeathsper100k))
+rownames(cv_states_mat2) <- cv_states_mat2$date
+cv_states_mat2$date <- NULL
+head(cv_states_mat2)
 ```
 
 ---
 
 ## Heatmap
 
-Heatmaps are useful for displaying three dimensional data in two dimensions,
-using color for the third dimension. Create a heatmap by using the
-`type = "heatmap"` argument.
+- We can then create a heatmap from the matrix by using the `type = "heatmap"` argument
+- If you want the x and y axes to show specify that with `x=colnames(data), y=rownames(data)` 
+- You can hide or show scale using `showscale=T/F`
 
 ```{r, eval=FALSE}
-terrain1 <- matrix(rnorm(100*100), nrow = 100, ncol = 100)
-plot_ly(z = ~terrain1, type = "heatmap")
+library(tidyr)
+cv_states_mat <- cv_states %>% select(state, date, newdeathsper100k) %>% filter(date>"2020-03-31") %>% filter(newdeathsper100k < 10)
+cv_states_mat2 <- as.data.frame(pivot_wider(cv_states_mat, names_from = state, values_from = newdeathsper100k))
+rownames(cv_states_mat2) <- cv_states_mat2$date
+cv_states_mat2$date <- NULL
+data <- as.matrix(cv_states_mat2)
+
+plot_ly(x=colnames(data), y=rownames(data),
+             z=~data,
+             type="heatmap",
+             showscale=T)
 ```
 
 ---
 
 ## Heatmap
 
-```{r, echo=FALSE, message=FALSE}
-terrain1 <- matrix(rnorm(100*100), nrow = 100, ncol = 100)
-plot_ly(z = ~terrain1, type = "heatmap")
+- We can then create a heatmap from the matrix by using the `type = "heatmap"` argument
+- If you want the x and y axes to show specify that with `x=colnames(data), y=rownames(data)` 
+- You can hide or show scale using `showscale=T/F`
+
+```{r, message=FALSE, echo=FALSE}
+library(tidyr)
+cv_states_mat <- cv_states %>% select(state, date, newdeathsper100k) %>% filter(date>"2020-03-31") %>% filter(newdeathsper100k < 10)
+cv_states_mat2 <- as.data.frame(pivot_wider(cv_states_mat, names_from = state, values_from = newdeathsper100k))
+rownames(cv_states_mat2) <- cv_states_mat2$date
+cv_states_mat2$date <- NULL
+data <- as.matrix(cv_states_mat2)
+
+plot_ly(x=colnames(data), y=rownames(data),
+             z=~data,
+             type="heatmap",
+             showscale=T)
+
 ```
 
 ---
 
 ## 3D Surface
 
-Why limit yourself to two dimensions when you can render three dimensions on a
-computer!? Create moveable 3D surfaces with `type = "surface"`.
+You can also create a 3D surface out of the matrix using `type = "surface"`
 
 ```{r, eval=FALSE}
-terrain2 <- matrix(sort(rnorm(100*100)), nrow = 100, ncol = 100)
-plot_ly(z = ~terrain2, type = "surface")
+plot_ly(x=colnames(data), y=rownames(data),
+             z=~data,
+             type="surface",
+             showscale=F)
 ```
 
 ---
 
 ## 3D Surface
 
-```{r, echo=FALSE, message=FALSE}
-terrain2 <- matrix(sort(rnorm(100*100)), nrow = 100, ncol = 100)
-plot_ly(z = ~terrain2, type = "surface")
+```{r, message=FALSE, echo=FALSE}
+plot_ly(x=colnames(data), y=rownames(data),
+             z=~data,
+             type="surface",
+             showscale=F)
 ```
 
 ---
 
 ## Choropleth Maps: Setup
 
-Choropleth maps illustrate data across geographic areas by shading regions with
-different colors. Choropleth maps are easy to make with Plotly though they
-require more setup compared to other Plotly graphics.
+Choropleth maps illustrate data across geographic areas by shading regions with different colors. Choropleth maps are easy to make with Plotly though they
+require more setup compared to other Plotly graphics. 
+
+Making choropleth maps requires two main types of input:
+
+1. **Geometry information**: This can be supplied using:
+  - **GeoJSON** file where each feature has either an id field or some identifying value in properties
+  - or a **built-in geometry** within plot_ly: **US states** and **world countries**
+2. **A list of values** indexed by feature identifier
+
+The GeoJSON data is passed to the geojson argument, and the data is passed into the **z argument** of the choropleth `trace`
+
+--
+
+## Choropleth Maps: Setup
+
+- Let's focus on interactively mapping the feature `naive_CFR` to each of the US states, including their boundaries
+- To use the USA States geometry, set `locationmode='USA-states'` and *provide locations as two-letter state abbreviations*
+- Our `cv_states` identifies states by their long names, so we need to transpose to their abbreviations first
 
 ```{r, eval=FALSE}
-# Create data frame
-state_pop <- data.frame(State = state.abb, Pop = as.vector(state.x77[,1]))
+cv_CFR <- cv_states_today %>% select(state, naive_CFR) # select data
+
+# Get state abbreviations and map to state names
+st_crosswalk <- tibble(state = state.name) %>%
+   bind_cols(tibble(abb = state.abb)) %>% 
+   bind_rows(tibble(state = "District of Columbia", abb = "DC"))
+cv_CFR2 <- left_join(cv_CFR, st_crosswalk, by = "state")
+cv_CFR2$state.name <- cv_CFR2$state
+cv_CFR2$state <- cv_CFR2$abb
+cv_CFR2$abb <- NULL
+```
+
+---
+
+## Choropleth Maps: Setup
+
+- Hover text can be specified within the data frame (this is true for any `plot_ly()` object) 
+
+```{r, eval=FALSE}
+
 # Create hover text
-state_pop$hover <- with(state_pop, paste(State, '<br>', "Population:", Pop))
-# Make state borders white
-borders <- list(color = toRGB("red"))
-# Set up some mapping options
-map_options <- list(
+cv_CFR2$hover <- with(cv_CFR, paste(state.name, '<br>', "CFR:", naive_CFR))
+
+# Set up mapping details
+set_map_details <- list(
   scope = 'usa',
   projection = list(type = 'albers usa'),
   showlakes = TRUE,
   lakecolor = toRGB('white')
 )
+
 ```
 
 ---
 
 ## Choropleth Maps: Mapping
 
+- Recall: To use the USA States geometry, set `locationmode='USA-states'`
+- Specify the map projection details inside `layout()`
+
 ```{r, eval=FALSE}
-plot_ly(z = ~state_pop$Pop, text = ~state_pop$hover, locations = ~state_pop$State, 
-        type = 'choropleth', locationmode = 'USA-states', 
-        color = state_pop$Pop, colors = 'Blues', marker = list(line = borders)) %>%
-  layout(title = 'US Population in 1975', geo = map_options)
+# Create the map
+fig <- plot_geo(cv_CFR2, locationmode = 'USA-states') %>% 
+  add_trace(
+    z = ~naive_CFR, text = ~hover, locations = ~state,
+    color = ~naive_CFR, colors = 'Blues'
+  )
+fig <- fig %>% colorbar(title = "CFR")
+fig <- fig %>% layout(
+    title = paste('CFR by State as of', Sys.Date(), '<br>(Hover for value)'),
+    geo = set_map_details
+  )
 ```
 
 ---
 
-## Choropleth Maps
+## Choropleth Maps: Mapping
 
-```{r, echo=FALSE, message=FALSE}
-# Create data frame
-state_pop <- data.frame(State = state.abb, Pop = as.vector(state.x77[,1]))
+```{r, message=FALSE, echo=FALSE}
+
+# Extract the data
+cv_CFR <- cv_states_today %>% select(state, naive_CFR) # select data
+
+# Get state abbreviations and map to state names
+st_crosswalk <- tibble(state = state.name) %>%
+   bind_cols(tibble(abb = state.abb)) %>% 
+   bind_rows(tibble(state = "District of Columbia", abb = "DC"))
+cv_CFR2 <- left_join(cv_CFR, st_crosswalk, by = "state")
+cv_CFR2$state.name <- cv_CFR2$state
+cv_CFR2$state <- cv_CFR2$abb
+cv_CFR2$abb <- NULL
+
 # Create hover text
-state_pop$hover <- with(state_pop, paste(State, '<br>', "Population:", Pop))
-# Make state borders white
-borders <- list(color = toRGB("red"))
-# Set up some mapping options
-map_options <- list(
+cv_CFR2$hover <- with(cv_CFR, paste(state.name, '<br>', "CFR:", naive_CFR))
+
+# Set up mapping details
+set_map_details <- list(
   scope = 'usa',
   projection = list(type = 'albers usa'),
   showlakes = TRUE,
   lakecolor = toRGB('white')
 )
 
-plot_ly(z = ~state_pop$Pop, text = ~state_pop$hover, locations = ~state_pop$State, 
-        type = 'choropleth', locationmode = 'USA-states', 
-        color = state_pop$Pop, colors = 'Blues', marker = list(line = borders)) %>%
-  layout(title = 'US Population in 1975', geo = map_options)
+# Create the map
+fig <- plot_geo(cv_CFR2, locationmode = 'USA-states') %>% 
+  add_trace(
+    z = ~naive_CFR, text = ~hover, locations = ~state,
+    color = ~naive_CFR, colors = 'Blues'
+  )
+fig <- fig %>% colorbar(title = "CFR")
+fig <- fig %>% layout(
+    title = paste('CFR by State as of', Sys.Date(), '<br>(Hover for value)'),
+    geo = set_map_details
+  )
+fig
+
 ```
 
 ---
 
-# `ggplotly()`
+## A note on interactive mapping
 
-- So far we've focused on `plot_ly()`. We also have the option of working with `ggplotly()` function from the **plotly** package, which has the ability to translate **ggplot2** to **plotly**. 
+- There are actually 4 different ways to render sf objects with plotly: `plot_geo()`, `plot_ly()`, `plot_mapbox()`, and via **ggplot2**’s `geom_sf()`. 
+- Plotly is a general purpose visualization library and doesn’t offer most fully featured geo-spatial visualization toolkit. If you run into limitations with plotly’s mapping functionality there are many other tools for interactive geospatial visualization in R, including: **leaflet**, **mapview**, **mapedit**, **tmap**, and **mapdeck**.
 
-- This functionality can be really helpful for quickly adding interactivity to your existing **ggplot2** workflow.
 
-- Moreover, even if you know `plot_ly()` and plotly.js well, `ggplotly()` can still be desirable for creating visualizations that aren't necessarily straightforward to achieve without it. 
+---
 
---- 
+# Interactive tables
 
-## `ggplotly()` THIS IS WHERE I CAN PUT THE LATIMES DATA EXAMPLE TO SHOW HOW EASY TO GET A GGPLOTLY
-
-To demonstrate, let's explore the relationship between `price` and other variables from the well-known `diamonds` dataset. 
-
-Hexagonal binning (i.e., `geom_hex()`) is useful way to visualize a 2D density, like the relationship between `price` and `carat`. We can see there is a strong positive linear relationship between the _log_ of carat and price. It also shows that for many, the carat is only rounded to a particular number (indicated by the light blue bands) and no diamonds are priced around $1500. Making this plot interactive makes it easier to decode the hexagonal colors into the counts that they represent.
+The `DT` package creates an interactive **DataTable** html widget out of a dataframe in 1 line of code:
 
 ```{r, eval=FALSE}
-p <- ggplot(diamonds, aes(x = log(carat), y = log(price))) + 
-  geom_hex(bins = 100)
-ggplotly(p)
-```
-
---- 
-
-## `ggplotly()` for statistical summaries
-
-We may use `ggplotly()` over `plot_ly()` to leverage **ggplot2**'s consistent and expressive interface for exploring statistical summaries across groups. For example, by including a discrete `color` variable (e.g., `cut`) with `geom_freqpoly()`, you get a frequency polygon for each level of that variable. This ability to quickly generate visual encodings of statistical summaries across an arbitrary number of groups works for basically any geom (e.g., `geom_boxplot()`, `geom_histogram()`, `geom_density()`, etc.) and is a key feature of **ggplot2**.
-
-```{r, eval=FALSE}
-p <- ggplot(diamonds, aes(x = log(price), color = clarity)) + 
-    geom_freqpoly()
-ggplotly(p)
+library(DT)
+cv_california <- cv_states %>% filter(state=="California") %>% select(date,cases,deaths,new_cases,new_deaths,naive_CFR)
+datatable(cv_california)
 ```
 
 ---
 
-## `ggplotly()` functionality
+## Interactive tables
 
-```{r}
-p<- ggplot(diamonds, aes(x=cut, y=price, fill=clarity)) + geom_bar(position="stack", stat = 'identity')
-ggplotly(p)
-```
-
-
---- 
-
-## `ggplotly()` for statistical summaries
-
-Now, to see how `price` varies with both `cut` and `clarity`, we could repeat this same visualization for each level of `cut`. This is where **ggplot2**'s `facet_wrap()` comes in handy. Moreover, to facilitate comparisons, we can have `geom_freqpoly()` display relative rather than absolute frequencies. By making this plot interactive, we can more easily compare particular levels of clarity by leveraging the legend filtering capabilities. 
-
-```{r, eval=FALSE}
-p <- ggplot(diamonds, aes(x = log(price), color = clarity)) + 
-    geom_freqpoly(stat = "density") + 
-    facet_wrap(~cut)
-ggplotly(p)
+```{r, echo=FALSE, message=FALSE}
+library(DT)
+cv_california <- cv_states %>% filter(state=="California") %>% select(date,cases,deaths,new_cases,new_deaths,naive_CFR)
+datatable(cv_california)
 ```
 
 ---
@@ -972,20 +1080,6 @@ plot_ly() %>%
 
 ---
 
-# Interactive tables
-
-We don't have time to go into a lot of the details but we recommend checking out
-
-The `DT` package, which creates a **DataTable** html widgets out of data.frames, or out of `formattable` objects, i.e.
-
-```{r, message=FALSE}
-library(DT)
-library(formattable)
-formattable::as.datatable(formattable(iris))
-```
-
----
-
 # Takeaways
 
 Hopefully in this class you have learned: 
@@ -1025,7 +1119,7 @@ Hopefully in this class you have learned:
 
 `Plotly`
 
-- [The Plolty Website](https://plot.ly/)
+- [Plolty R Reference](https://plotly.com/r/reference)
 - [The Plotly R API](https://plot.ly/r/)
 - [The Plotly R Package on GitHub](https://github.com/ropensci/plotly)
 - [The Plotly R Cheatsheet](https://images.plot.ly/plotly-documentation/images/r_cheat_sheet.pdf)
